sg.tf
resource "aws_security_group" "sg1" {
  vpc_id = aws_vpc.net1.id

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  ingress {
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
}
tags = {Name = "SG1"}
}
